test/subjects/errors/try_catch_break.php
<?php

	try
	{
		break; // { Error: Cannot break/continue 1 levels }
		echo "asd\n";
	}
	catch (Exception $e)
	{
	}
	echo "exitted safely\n";

?>
